# mypyutils

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: log.py
src/mypyutils/: io.py  log.py  misc.py
