[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mypyutils"
description = "A collection of Python helpers."
readme = "README.md"
version = "0.1.0"
license = {file = "LICENSE"}
authors = [
	{name = "Christoph M. Schmidt", email = "c.m.schmidt@tudelft.nl"}
]
requires-python = ">3.11"
dependencies = [
	"os",
	"datetime",
]
	
[tool.setuptools.packages.find]
where = ["src"]  
