[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mypyutils"
description = "A collection of Python helpers."
readme = "README.md"
version = "0.1.1"
license = {file = "LICENSE"}
authors = [
	{name = "Christoph M. Konrad", email = "c.m.schmidt@tudelft.nl"}
]
requires-python = ">3.11"
dependencies = [
	"datetime",
	"keyboard",
]
	
[tool.setuptools.packages.find]
where = ["src"]  
