[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mypyutils"
description = "A collection of Python helpers."
readme = "README.md"
version = "1.0.0"
license = {file = "LICENSE"}
authors = [
	{name = "Christoph M. Konrad", email = "c.m.konrad@tudelft.nl"}
]
requires-python = ">3.11"
dependencies = [
	"datetime",
	"keyboard",
	"pyyaml",
]
	
[tool.setuptools.packages.find]
where = ["src"]  
